# FFmpegPlayerDemo

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/yuong/ffmpegplayer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  BaseChannel.h  CMakeLists.txt  FFmpegControl.cpp  FFmpegControl.h  JavaCallHelper.cpp  JavaCallHelper.h  VideoChannel.cpp  VideoChannel.h  native-lib.cpp
app/src/main/java/com/yuong/ffmpegplayer/: MainActivity.java
app/src/main/java/com/yuong/ffmpegplayer/player/: FFmpegPlayer.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/yuong/ffmpegplayer/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
